--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,40 @@
-Pablo Fernandes Santos de Aragão Téjo<br>
+{{title}}
+
+<h1>{{this.aluno}}</h1>
+
+
+
+<mat-card class="mat-card-principal">
+<mat-form-field class="mat-input-principal" appearance="fill">
+  <mat-label>Nome:</mat-label>
+ <input matInput [(ngModel)]="usuario.nome" placeholder="digite o nome">
+</mat-form-field>
+
+<mat-form-field class="mat-input-principal" appearance="fill">
+  <mat-label>CPF:</mat-label>
+  <input matInput [(ngModel)]="usuario.cpf" placeholder="digite o cpf"><br>
+</mat-form-field>
+<mat-form-field class="mat-input-principal" appearance="fill">
+<mat-label>Idade:</mat-label>
+  <input matInput [(ngModel)]="usuario.idade" placeholder="digite a idade"><br>
+</mat-form-field>
+<button mat-raised-button mat-icon-button color="primary" (click)="inserirUsuario()">
+  <mat-icon>add_box</mat-icon>
+</button>
+</mat-card>
+
+
+
+<mat-card *ngFor="let usuario of usuarios" class="mat-card-simples">
+  <mat-card-header>
+
+    <mat-card-title><mat-icon>person</mat-icon> {{usuario.nome}}</mat-card-title>
+    <mat-card-subtitle *ngIf="usuario.cpf">CPF: {{usuario.cpf}} Idade: {{usuario.idade}}</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+       Lorem Ipsum
+  </mat-card-content>
+</mat-card>
+
+
+
